--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "npm": "6.x"
   },
   "dependencies": {
-    "polyjuice": "^2.2.4",
+    "polyjuice": "^1.1.8",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-mdl": "^1.11.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +31,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
